--- a/design-react/src/components/about-block/about-block.css
+++ b/design-react/src/components/about-block/about-block.css
@@ -86,3 +86,11 @@
 {
     transform: scale(1.1);
 }
+
+@media (max-width: 1350px)
+{
+    .about-block-content
+    {
+        flex-direction: column;
+    }
+}
