--- a/design-react/src/components/blue-block/blue-block.css
+++ b/design-react/src/components/blue-block/blue-block.css
@@ -28,3 +28,24 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+@media (max-width: 1180px)
+{
+    .blue-block
+    {
+        position: relative;
+        margin-left: 0;
+        margin-top: 0;
+        width: 525px;
+        height: 252px;
+    }
+    .blue-block-list
+    {
+        flex-direction: row;
+        gap: 30px;
+        margin-top: 0;
+    }
+    
+}
+
+
