--- a/design-react/src/components/footer/footer.css
+++ b/design-react/src/components/footer/footer.css
@@ -16,7 +16,8 @@
     display: flex;
     justify-content: space-between;
     padding-top: 40px;
-    padding-bottom: 40px;   
+    padding-bottom: 40px;  
+    gap: 30px; 
 }
 .top-footer-tittle
 {
@@ -52,6 +53,7 @@
     justify-content: space-between;
     padding-top: 80px;
     padding-bottom: 84px;
+    gap: 30px;
 }
 .bottom-footer-tittle
 {
@@ -106,4 +108,37 @@
 {
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
 }
+.footer-container
+{
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+@media (max-width: 700px)
+{
+    .bottom-footer
+    {
+        flex-direction: column;
+    }
+}
+@media (max-width: 500px)
+{
+    .top-footer-content
+    {
+        flex-direction: column;
+    }
+    .input-line
+    {
+        width: 300px;
+    }
+}
+@media (max-width: 350px)
+{
+    .input-line
+    {
+        width: 200px;
+    }
+}
+
