--- a/design-react/src/components/home-header/home-header.css
+++ b/design-react/src/components/home-header/home-header.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 46px;
+    position: relative;
 }
 .tittle-block
 {
@@ -60,6 +61,25 @@
 .blue-block
 {
     margin-left: 806px;
-    margin-top: 140px;
+    margin-top: -722px;
     z-index: 100;
+    position: absolute;
 }
+
+@media (max-width: 1180px)
+{
+    .blue-block
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-top: 40px;
+    }
+    .header-line
+    {
+           
+    }
+}
+
+
