--- a/design-react/src/components/person-block/person-block.css
+++ b/design-react/src/components/person-block/person-block.css
@@ -31,3 +31,16 @@
     font-size: 18px;
     font-weight: 500;   
 }
+
+@media (max-width: 330px)
+{
+    .person-block
+    {
+        flex-direction: column;
+        width: 200px;
+        height: 160px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
