--- a/design-react/src/components/product-items/product-item.css
+++ b/design-react/src/components/product-items/product-item.css
@@ -41,3 +41,20 @@
 {
     transform: scale(1.05);
 }
+
+@media (max-width: 450px)
+{
+    .product-item-description
+    {
+        display: flex;
+        gap: 20px;
+    }
+    .product-item-number
+    {
+        font-size: 25px;
+    }
+    .product-item-name
+    {
+        font-size: 25px;
+    }
+}
