--- a/design-react/src/components/service-block/service-block.css
+++ b/design-react/src/components/service-block/service-block.css
@@ -20,27 +20,13 @@
     margin-top: 40px;
     justify-content: center;
 }
-.service-square
+
+@media (max-width: 750px)
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 20px;
-    background: var(--grayscale-white, #FFF);
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.10);
-    padding: 20px 27px 22px 27px;
-}
-.service-square-tittle
-{
-    color: #333333;
-    font-size: 24px;
-    font-weight: 600;
-}
-.service-square-text
-{
-    max-width: 334px;
-    color: #9C9C9C;
-    font-size: 18px;
-    font-weight: 400;
+    .service-squares
+    {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
