--- a/design-react/src/styles/main.css
+++ b/design-react/src/styles/main.css
@@ -39,6 +39,14 @@ body{
     text-align: center;
 }
 
+@media (max-width: 350px)
+{
+    .header-tittle
+    {
+        font-size: 35px;
+    }
+}
+
 
 
 
