--- a/design-react/src/components/navbar/navbar.css
+++ b/design-react/src/components/navbar/navbar.css
@@ -1,6 +1,10 @@
 @import './../../styles/reset.css';
 
 /* Nav */
+.body
+{
+    overflow: hidden;
+}
 .nav
 {
     margin-top: 40px;
@@ -80,6 +84,53 @@
     transition: transform .2s;
 }
 .logo-image:hover
-{
+{ 
     transform: scale(1.1);
+}
+.mobile-btn
+{
+    display: none;
+}
+.no-scroll
+{
+    overflow: hidden;
+}
+@media (max-width: 1000px)
+{
+    .mobile-btn
+    {
+        display: block;
+        cursor: pointer;
+        z-index: 10;
+    }
+    .nav-list
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 10;
+        background-color: #FFF;
+        display: none;
+    }
+    .nav-item
+    {
+        font-size: 25px
+    }
+    .active
+    {
+        display: block;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
 }
