--- a/design-react/src/components/service-block-item/service-block-item.css
+++ b/design-react/src/components/service-block-item/service-block-item.css
@@ -13,6 +13,15 @@
     padding: 20px 27px 22px 27px;
     max-width: 400px;
 }
+.ellipse
+{
+    width: 63px;
+	height: 63px;
+	background: #D9D9D9;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+}
 .service-square-tittle
 {
     color: #333333;
@@ -25,6 +34,22 @@
     color: #9C9C9C;
     font-size: 18px;
     font-weight: 400;
+}
+.service-square
+{
+    transition: transform .2s;
+}
+.service-square:hover
+{
+    transform: scale(1.1);
+}
+.service-square:hover .ellipse-anim
+{
+    background: #2C3878;
+}
+.ellipse-anim
+{
+    transition: .4s;
 }
 
 @media (max-width: 1050px)
